tests/test_assets/semantic/invalid/enums/duplicate_members.cog
DuplicateMember :: enum(u8) {
    A,
    A,
}
