tests/test_assets/semantic/invalid/enums/duplicate_members.expected
semantic error at line 3: duplicate enum member 'A'
1 semantic error generated.
